# mart

./: compose.yaml  kafka.txt  mart.txt
User_Service/: Dockerfile  pyproject.toml
User_Service/user_service/: curd.py  db.py  main.py  models.py  services.py  settings.py
mart_api/: pyproject.toml
mart_api/mart_api/: main.py
sample_service_with_kafka/: compose.yaml
sample_service_with_kafka/microservice/: pyproject.toml
sample_service_with_kafka/microservice/app/: main.py
services/: compose.yaml
services/microservice_02/app/: settings.py
services/user_service/: .env  Dockerfile.dev  pyproject.toml
services/user_service/app/: auth.py  crud.py  db.py  kafka.py  main.py  model.py  schema.py  settings.py  user.proto  user_pb2.py
